kubernetes/2_sydent/2_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sydent
  namespace: sydent
spec:
  selector:
    matchLabels:
      app: sydent
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sydent
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: config-volume
          configMap:
            name: sydent-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: sydent
      containers:
        - name: sydent
          image: matrixdotorg/sydent:v2.5.2
          ports: 
            - containerPort: 8090
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: config-volume
              mountPath: /data/sydent.conf
              subPath: sydent.conf
          readinessProbe:
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 8090
              path: /_matrix/identity/v2/terms
