kubernetes/2_sydent/3_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sydent
  namespace: sydent
spec:
  selector:
    app: sydent
  ports:
    - name: http
      port: 8090
      targetPort: 8090
