kubernetes/2_sydent/4_ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sydent
  namespace: sydent
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.identity.parrhesia.dev`) && PathPrefix(`/_matrix/identity`)
      kind: Rule
      services:
        - name: sydent
          port: 8090
    - match: Host(`identity.parrhesia.dev`) && PathPrefix(`/_matrix/identity`)
      kind: Rule
      services:
        - name: sydent
          port: 8090
  tls:
    secretName: parrhesia-dev-tls
